# Newtonian-Particles

./: .gitignore  Newtonian-Particles.cabal  README.md  config.csv
app/: Animate.hs  Compute.hs  Main.hs  Parse.hs  Types.hs
config/: config.csv
presets/: hundred-fifty.csv  m1.csv  m100.csv  m200.csv  m2000.csv  m25.csv  m250.csv  m300.csv  m350.csv  m400.csv  m450.csv  m50.csv  m500.csv  m7.csv  m900.csv  one-ball.csv  seventy.csv  three-balls.csv  three.csv
scripts/: cleanAppDir.sh  randomInit.py
