cabal-version:      2.4
name:               Newtonian-Particles
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             nathanjcuevas
maintainer:         nathanjcuevas@gmail.com
-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable Newtonian-Particles
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Compute, Animate, Parse, Types

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, gloss, deepseq, time
    hs-source-dirs:   app
    default-language: Haskell2010
